services/notification-svc/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-svc
  labels:
    app: notification-svc
    app.kubernetes.io/part-of: ecommerce-platform
spec:
  type: ClusterIP
  selector:
    app: notification-svc
  ports:
    - name: http
      port: 8086
      targetPort: http
